--- a/nlp-starter-notebook.ipynb
+++ b/nlp-starter-notebook.ipynb
@@ -540,11 +540,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -636,8 +631,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just but looking - SbertCross encoder and Sbert bi encoder is doing pretty well. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +649,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Chris Dong\\Desktop\\codeBase\\nlp-starter\\nlp-starter-notebook.ipynb Cell 22'\u001b[0m in \u001b[0;36m<cell line: 25>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Chris%20Dong/Desktop/codeBase/nlp-starter/nlp-starter-notebook.ipynb#ch0000026?line=13'>14</a>\u001b[0m     fig\u001b[39m.\u001b[39madd_trace(\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Chris%20Dong/Desktop/codeBase/nlp-starter/nlp-starter-notebook.ipynb#ch0000026?line=14'>15</a>\u001b[0m         go\u001b[39m.\u001b[39mScatter(\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Chris%20Dong/Desktop/codeBase/nlp-starter/nlp-starter-notebook.ipynb#ch0000026?line=15'>16</a>\u001b[0m             x\u001b[39m=\u001b[39mstsb_test[score_cols[\u001b[39m0\u001b[39m]], \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Chris%20Dong/Desktop/codeBase/nlp-starter/nlp-starter-notebook.ipynb#ch0000026?line=19'>20</a>\u001b[0m         row\u001b[39m=\u001b[39mrow\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m, col\u001b[39m=\u001b[39mcol\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Chris%20Dong/Desktop/codeBase/nlp-starter/nlp-starter-notebook.ipynb#ch0000026?line=20'>21</a>\u001b[0m     )\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Chris%20Dong/Desktop/codeBase/nlp-starter/nlp-starter-notebook.ipynb#ch0000026?line=23'>24</a>\u001b[0m fig\u001b[39m.\u001b[39mupdate_layout(height\u001b[39m=\u001b[39m\u001b[39m700\u001b[39m, width\u001b[39m=\u001b[39m\u001b[39m1000\u001b[39m, title_text\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mSpearman Rank Correlation (ρ × 100)\u001b[39m\u001b[39m'\u001b[39m, showlegend\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Chris%20Dong/Desktop/codeBase/nlp-starter/nlp-starter-notebook.ipynb#ch0000026?line=24'>25</a>\u001b[0m fig\u001b[39m.\u001b[39mshow()\n",
+      "\u001b[1;32mc:\\Users\\Chris Dong\\Desktop\\codeBase\\nlp-starter\\nlp-starter-notebook.ipynb Cell 23'\u001b[0m in \u001b[0;36m<cell line: 25>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Chris%20Dong/Desktop/codeBase/nlp-starter/nlp-starter-notebook.ipynb#ch0000026?line=13'>14</a>\u001b[0m     fig\u001b[39m.\u001b[39madd_trace(\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Chris%20Dong/Desktop/codeBase/nlp-starter/nlp-starter-notebook.ipynb#ch0000026?line=14'>15</a>\u001b[0m         go\u001b[39m.\u001b[39mScatter(\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Chris%20Dong/Desktop/codeBase/nlp-starter/nlp-starter-notebook.ipynb#ch0000026?line=15'>16</a>\u001b[0m             x\u001b[39m=\u001b[39mstsb_test[score_cols[\u001b[39m0\u001b[39m]], \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Chris%20Dong/Desktop/codeBase/nlp-starter/nlp-starter-notebook.ipynb#ch0000026?line=19'>20</a>\u001b[0m         row\u001b[39m=\u001b[39mrow\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m, col\u001b[39m=\u001b[39mcol\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Chris%20Dong/Desktop/codeBase/nlp-starter/nlp-starter-notebook.ipynb#ch0000026?line=20'>21</a>\u001b[0m     )\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Chris%20Dong/Desktop/codeBase/nlp-starter/nlp-starter-notebook.ipynb#ch0000026?line=23'>24</a>\u001b[0m fig\u001b[39m.\u001b[39mupdate_layout(height\u001b[39m=\u001b[39m\u001b[39m700\u001b[39m, width\u001b[39m=\u001b[39m\u001b[39m1000\u001b[39m, title_text\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mSpearman Rank Correlation (ρ × 100)\u001b[39m\u001b[39m'\u001b[39m, showlegend\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Chris%20Dong/Desktop/codeBase/nlp-starter/nlp-starter-notebook.ipynb#ch0000026?line=24'>25</a>\u001b[0m fig\u001b[39m.\u001b[39mshow()\n",
       "File \u001b[1;32mc:\\Users\\Chris Dong\\.conda\\envs\\semantic_similarity\\lib\\site-packages\\plotly\\basedatatypes.py:3398\u001b[0m, in \u001b[0;36mBaseFigure.show\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   3365\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   3366\u001b[0m \u001b[39mShow a figure using either the default renderer(s) or the renderer(s)\u001b[39;00m\n\u001b[0;32m   3367\u001b[0m \u001b[39mspecified by the renderer argument\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   3394\u001b[0m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m   3395\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   3396\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mplotly\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mio\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpio\u001b[39;00m\n\u001b[1;32m-> 3398\u001b[0m \u001b[39mreturn\u001b[39;00m pio\u001b[39m.\u001b[39;49mshow(\u001b[39mself\u001b[39;49m, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
       "File \u001b[1;32mc:\\Users\\Chris Dong\\.conda\\envs\\semantic_similarity\\lib\\site-packages\\plotly\\io\\_renderers.py:396\u001b[0m, in \u001b[0;36mshow\u001b[1;34m(fig, renderer, validate, **kwargs)\u001b[0m\n\u001b[0;32m    391\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    392\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mMime type rendering requires ipython but it is not installed\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    393\u001b[0m         )\n\u001b[0;32m    395\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m nbformat \u001b[39mor\u001b[39;00m LooseVersion(nbformat\u001b[39m.\u001b[39m__version__) \u001b[39m<\u001b[39m LooseVersion(\u001b[39m\"\u001b[39m\u001b[39m4.2.0\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m--> 396\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    397\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mMime type rendering requires nbformat>=4.2.0 but it is not installed\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    398\u001b[0m         )\n\u001b[0;32m    400\u001b[0m     ipython_display\u001b[39m.\u001b[39mdisplay(bundle, raw\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m    402\u001b[0m \u001b[39m# external renderers\u001b[39;00m\n",
       "\u001b[1;31mValueError\u001b[0m: Mime type rendering requires nbformat>=4.2.0 but it is not installed"
